fixed shift products

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -7,9 +7,7 @@ h1 {
   .size {
     height: 113px;
   }
-  pre {
-    margin-top: 30px;
-  }
+  
   .box1 {
     margin: 20px;
     padding: 10px;
@@ -20,19 +18,17 @@ h1 {
   
   .round {
     margin: 20px;
-    padding: 10px;
+    // padding: 10px;
   }
   .v-application .pink {
-      background-color: #e91e63 !important;
+      background-color: #ed388c !important;
       border-color: #0a0a0a !important;
   }
-  h1 {
-    margin-top: 20px;
-    margin-left: 50px;
-  }
+ 
   
-  pre {
+  p {
     margin-top: 30px;
+    margin-left: 40px;
   }  
 
 
@@ -40,7 +36,7 @@ h1 {
 /* mobile */
 @media (max-width: 480px) {
   #app {
-    background-image: url("assets/images/home-image-mobile.jpeg");
+    // background-image: url("assets/images/home-image-mobile.jpeg");
   }
 
   .main-list {
